<resources>
    <string name="app_name">ActorApp</string>
    <string name="add_actor_toolbar">Add Actor</string>
    <string name="open_preferences_toolbar">Preferences</string>
    <string name="open_about_toolbar">About</string>
    <string name="add_movie_toolbar">Add Movie</string>
    <string name="edit_movie_toolbar">Edit</string>
    <string name="delete_movie_toolbar">Delete</string>
    <string name="name">Name</string>
    <string name="mDescription">Description</string>
    <string name="dob">DoB</string>
    <string name="add">Add</string>
    <string name="edit_actor">Edit Actor</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
</resources>
