<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="10dp">

    <TextView
        android:id="@+id/tv_dialog_movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_movie_toolbar"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"/>

    <EditText
        android:id="@+id/et_dialog_movie_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:paddingTop="5dp"/>

    <Button
        android:id="@+id/btn_dialog_movie_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:paddingTop="5dp"/>

</LinearLayout>